update blog content

--- a/src/content/blog/improve-concentration/index.mdx
+++ b/src/content/blog/improve-concentration/index.mdx
@@ -1,13 +1,12 @@
 ---
 title: 'Tips to improve concentration'
-publishDate: 'Dec 10, 2024'
 description: 'Mindfulness, cognitive training, and a healthy lifestyle may help sharpen your focus.'
-tags:
-  - Example
-  - Mind
-  - Mood
-language: 'English'
+publishDate: '2024-12-10'
 heroImage: { src: './thumbnail.jpg', color: '#9698C1' }
+tags: ['Example', 'Mind', 'Mood']
+language: 'English'
+draft: true
+comment: true
 ---
 
 import { Aside } from 'astro-pure/user'
