update blog content

--- a/src/content/blog/build-astro-blog/index.mdx
+++ b/src/content/blog/build-astro-blog/index.mdx
@@ -275,10 +275,10 @@ import { Comment } from 'astro-pure/advanced'
 ;<Comment />
 ```
 
-参考链接：
-
-[DOCS • Astro Theme Pure](https://astro-pure.js.org/docs/)
-
-[cworld1/astro-theme-pure: ⭐ A simple, fast and powerful blog theme built by Astro](https://github.com/cworld1/astro-theme-pure)
-
-[快速上手 | Waline](https://waline.js.org/guide/get-started/)
+> 参考链接：
+>
+> [DOCS • Astro Theme Pure](https://astro-pure.js.org/docs/)
+>
+> [cworld1/astro-theme-pure: ⭐ A simple, fast and powerful blog theme built by Astro](https://github.com/cworld1/astro-theme-pure)
+>
+> [快速上手 | Waline](https://waline.js.org/guide/get-started/)
