Modify blog: S8030-update-BMC

--- a/src/content/blog/S8030-update-BMC/index.mdx
+++ b/src/content/blog/S8030-update-BMC/index.mdx
@@ -57,3 +57,6 @@ If upgrade BMC from old version RR11.5 code base to v4.07 V12 code base, it coul
 > [泰安S8030安装&使用简单说明](https://www.bilibili.com/opus/738422556168552473)
 >
 > [AMD EPYC SP3 泰安S8030主板 入门避坑指南（常见使用问题汇总）](https://www.bilibili.com/opus/852109210756841475)
+>
+> [Tyan S8030GM2NE | ServeTheHome Forums](https://forums.servethehome.com/index.php?threads/tyan-s8030gm2ne.28914/)
+
